@@ -3,8 +3,8 @@
 if "%1"=="" goto help
 
 del *.class
-javac -cp tester.jar *.java
-java -Djava.security.manager=disallow -classpath "tester.jar;%cd%" tester.Main %1
+javac -cp lib/tester.jar *.java
+java -classpath lib/tester.jar;"%cd%" tester.Main %1
 goto :eof
 
 :help
